fix 🐛: Reduce Gap in Slider button.

--- a/compliance-web/src/assets/css/custom.css
+++ b/compliance-web/src/assets/css/custom.css
@@ -633,7 +633,7 @@ section { overflow: hidden; }
   left: 0;
   width: 100%;
   display: flex;
-  gap: 20px;
+  gap: 10px;
   /* places prev/next at both ends */
   align-items: center;
   transform: translate( 70% ,-60%); 
